# paper-3

./: .env  .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
Backend/: main.py
